20220319_Ingress/test-ingress_prometheus.yaml
---
### Ingress 作成
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
#  name: nginx-ingress
  name: hostnetwork-test-ingress
spec:
  ingressClassName: nginx
  rules:
#  - host: nginx.test.local
#    http:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-svc
            port:
              number: 8080
      - path: /grafana/
        pathType: Prefix
        backend:
          service:
            name: grafana-svc-koitu
            port:
              number: 80

---
apiVersion: v1
kind: Service
metadata:
  name: grafana-svc-koitu
  namespace: monitoring
spec:
  type: ExternalName
  externalName: prometheus-grafana.monitoring
---
### Service 作成
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  selector:
    app: nginx
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 80
---
### Pod 作成
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  containers:
  - name: nginx
    image: nginx:1.21.4
    imagePullPolicy: IfNotPresent
    ports:
    - containerPort: 80
